@@ -1,3 +1,8 @@
+2007-11-28 Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail-maemo/tny-maemo-conic-dummy-device.c
+	Fixed a g_signal_connect which was receiving an invalid user_data
+
 2007-11-26 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
 	
 	* add a dummy conic device, so libtinymail-maemo does
